--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "braintree": "^3.2.2",
         "chart.js": "^2.9.4",
         "vue": "^2.6.12"
     }
