--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/cart.js": "/js/cart.js",
     "/js/checkout.js": "/js/checkout.js",
+    "/js/stats.js": "/js/stats.js",
     "/css/app.css": "/css/app.css",
     "/css/style.css": "/css/style.css"
 }
